let build pass on ubuntu with working mac