@@ -1,178 +1,168 @@
 package opengl.fbo;
 
+import java.awt.image.BufferedImage;
+import java.io.File;
+import javax.imageio.ImageIO;
+import org.junit.Assert;
+import org.jzy3d.maths.Array;
 import opengl.ByteUtils;
 import opengl.GL;
 import opengl.demos.SampleTriangle;
-import opengl.macos.GL_macOS_10_15_3;
-import org.junit.Assert;
-import org.junit.Test;
-import org.jzy3d.maths.Array;
 
-import javax.imageio.ImageIO;
-import java.awt.image.BufferedImage;
-import java.io.File;
-
-// VM ARGS : -XstartOnFirstThread --enable-native-access=ALL-UNNAMED --add-modules jdk.incubator.foreign -Djava.library.path=.:/System/Library/Frameworks/OpenGL.framework/Versions/Current/Libraries/
 public class TestFBO {
-    public int[] RED = {255,0,0,255};
-    public int[] GREEN = {0,255,0,255};
-    public int[] BLUE = {0,0,255,255};
+  public static int[] RED = {255,0,0,255};
+  public static int[] GREEN = {0,255,0,255};
+  public static int[] BLUE = {0,0,255,255};
 
-    @Test
-    public void givenFBO_whenRenderSomething_ThenGetBufferedImage(){
-        String file1 = "target/" +TestFBO.class.getSimpleName() + "-1.png";
-        String file2 = "target/" +TestFBO.class.getSimpleName() + "-2.png";
+  public static void givenFBO_whenRenderSomething_ThenGetBufferedImage(GL gl) {
+    String file1 = "target/" +TestFBO_macOS.class.getSimpleName() + "-1.png";
+    String file2 = "target/" +TestFBO_macOS.class.getSimpleName() + "-2.png";
 
-        // Given a GL context
-        GL gl = new GL_macOS_10_15_3(true);
+    
+    // ----------------------------------
+    // Given a FBO prepared with this context
 
-        // ----------------------------------
-        // Given a FBO prepared with this context
+    int width = 256;
+    int height = 256;
+    FBO fbo = new FBO(width, height);
 
-        int width = 256;
-        int height = 256;
-        FBO fbo = new FBO(width, height);
+    Assert.assertFalse(fbo.prepared);
 
-        Assert.assertFalse(fbo.prepared);
+    // ----------------------------------
+    // When preparing buffers for these dimensions
 
-        // ----------------------------------
-        // When preparing buffers for these dimensions
+    fbo.prepare(gl);
+    Assert.assertTrue(fbo.prepared);
 
-        fbo.prepare(gl);
-        Assert.assertTrue(fbo.prepared);
+    // FIXME : this should return true, not an exception
+    //Assert.assertTrue(fbo.frameBufferIds.isLoaded());
+    //Assert.assertTrue(fbo.frameBufferIds.isMapped());
 
-        // FIXME : this should return true, not an exception
-        //Assert.assertTrue(fbo.frameBufferIds.isLoaded());
-        //Assert.assertTrue(fbo.frameBufferIds.isMapped());
+    // ----------------------------------
+    // When Render something and get image
 
-        // ----------------------------------
-        // When Render something and get image
+    SampleTriangle.rgbaTriangle2D(width, height);
 
-        SampleTriangle.rgbaTriangle2D(width, height);
+    BufferedImage image = fbo.getImage(gl);
 
-        BufferedImage image = fbo.getImage(gl);
+    saveImage(file1, image); // for review
 
-        saveImage(file1, image); // for review
+    // ----------------------------------
+    // Then red vertex is at the expected
+    // position with expected color
 
-        // ----------------------------------
-        // Then red vertex is at the expected
-        // position with expected color
+    int[] pxR = {0,0}; // top left
+    int[] pxG = {width-1,0}; // top right
+    int[] pxB = {width-1,height-1}; // bottom right
 
-        int[] pxR = {0,0}; // top left
-        int[] pxG = {width-1,0}; // top right
-        int[] pxB = {width-1,height-1}; // bottom right
+    int[] Rgba = ByteUtils.IntARGBtoRGBAi(image.getRGB(pxR[0],pxR[1]));
 
-        int[] Rgba = ByteUtils.IntARGBtoRGBAi(image.getRGB(pxR[0],pxR[1]));
+    Array.print("TestFBO:red:actual:", Rgba);
+    Array.print("TestFBO:red:expect:", RED);
 
-        Array.print("TestFBO:red:actual:", Rgba);
-        Array.print("TestFBO:red:expect:", RED);
+    Assert.assertArrayEquals(RED, Rgba);
 
-        Assert.assertArrayEquals(RED, Rgba);
+    // ----------------------------------
+    // Then green vertex is at the expected
+    // position with expected color
 
-        // ----------------------------------
-        // Then green vertex is at the expected
-        // position with expected color
+    int[] rGba = ByteUtils.IntARGBtoRGBAi(image.getRGB(pxG[0],pxG[1]));
+    // FIXME! Green is 254 instead of 255, why?
+    GREEN[1] = GREEN[1]-1; // a bit is missing!
+    Array.print("TestFBO:green:actual:", rGba);
+    Array.print("TestFBO:green:expect:", GREEN);
 
-        int[] rGba = ByteUtils.IntARGBtoRGBAi(image.getRGB(pxG[0],pxG[1]));
-        // FIXME! Green is 254 instead of 255, why?
-        GREEN[1] = GREEN[1]-1; // a bit is missing!
-        Array.print("TestFBO:green:actual:", rGba);
-        Array.print("TestFBO:green:expect:", GREEN);
+    Assert.assertArrayEquals(GREEN, rGba);
 
-        Assert.assertArrayEquals(GREEN, rGba);
+    // ----------------------------------
+    // Then blue vertex is at the expected
+    // position with expected color
 
-        // ----------------------------------
-        // Then blue vertex is at the expected
-        // position with expected color
+    int[] rgBa = ByteUtils.IntARGBtoRGBAi(image.getRGB(pxB[0],pxB[1]));
+    Array.print("TestFBO:blue:actual:", rgBa);
+    Array.print("TestFBO:blue:expect:", BLUE);
 
-        int[] rgBa = ByteUtils.IntARGBtoRGBAi(image.getRGB(pxB[0],pxB[1]));
-        Array.print("TestFBO:blue:actual:", rgBa);
-        Array.print("TestFBO:blue:expect:", BLUE);
+    Assert.assertArrayEquals(BLUE, rgBa);
 
-        Assert.assertArrayEquals(BLUE, rgBa);
+    // ----------------------------------
+    // When resize FBO
 
-        // ----------------------------------
-        // When resize FBO
+    width *=2;
+    height *=2;
 
-        width *=2;
-        height *=2;
+    // mark FBO for resize
+    fbo.resize(width, height);
+    Assert.assertFalse(fbo.prepared); // not prepared anymore
+    Assert.assertEquals(width, fbo.getWidth());
+    Assert.assertEquals(height, fbo.getHeight());
 
-        // mark FBO for resize
-        fbo.resize(width, height);
-        Assert.assertFalse(fbo.prepared); // not prepared anymore
-        Assert.assertEquals(width, fbo.getWidth());
-        Assert.assertEquals(height, fbo.getHeight());
+    // need to explicitely regenerate before re-rendering
+    fbo.prepare(gl);
 
-        // need to explicitely regenerate before re-rendering
-        fbo.prepare(gl);
+    // re-render
+    SampleTriangle.rgbaTriangle2D(width, height);
 
-        // re-render
-        SampleTriangle.rgbaTriangle2D(width, height);
+    // get a double sized image
+    image = fbo.getImage(gl);
 
-        // get a double sized image
-        image = fbo.getImage(gl);
+    Assert.assertTrue(fbo.prepared); // now prepared to this size
+    Assert.assertEquals(width, image.getWidth());
+    Assert.assertEquals(height, image.getHeight());
 
-        Assert.assertTrue(fbo.prepared); // now prepared to this size
-        Assert.assertEquals(width, image.getWidth());
-        Assert.assertEquals(height, image.getHeight());
+    saveImage(file2, image); // for review
 
-        saveImage(file2, image); // for review
+    // ----------------------------------
+    // Then red vertex is at the expected
+    // position with expected color
 
-        // ----------------------------------
-        // Then red vertex is at the expected
-        // position with expected color
+    int[] pxR2 = {0,0}; // top left
+    int[] pxG2 = {width-1,0}; // top right
+    int[] pxB2 = {width-1,height-1}; // bottom right
 
-        int[] pxR2 = {0,0}; // top left
-        int[] pxG2 = {width-1,0}; // top right
-        int[] pxB2 = {width-1,height-1}; // bottom right
+    Rgba = ByteUtils.IntARGBtoRGBAi(image.getRGB(pxR2[0], pxR2[1]));
 
-        Rgba = ByteUtils.IntARGBtoRGBAi(image.getRGB(pxR2[0], pxR2[1]));
+    Array.print("TestFBO:red:actual:", Rgba);
+    Array.print("TestFBO:red:expect:", RED);
 
-        Array.print("TestFBO:red:actual:", Rgba);
-        Array.print("TestFBO:red:expect:", RED);
+    Assert.assertArrayEquals(RED, Rgba);
 
-        Assert.assertArrayEquals(RED, Rgba);
+    // ----------------------------------
+    // Then green vertex is at the expected
+    // position with expected color
 
-        // ----------------------------------
-        // Then green vertex is at the expected
-        // position with expected color
+    rGba = ByteUtils.IntARGBtoRGBAi(image.getRGB(pxG2[0], pxG2[1]));
+    GREEN[1] = GREEN[1]+1; // a bit is NOT missing!
 
-        rGba = ByteUtils.IntARGBtoRGBAi(image.getRGB(pxG2[0], pxG2[1]));
-        GREEN[1] = GREEN[1]+1; // a bit is NOT missing!
+    Array.print("TestFBO:green:actual:", rGba);
+    Array.print("TestFBO:green:expect:", GREEN);
 
-        Array.print("TestFBO:green:actual:", rGba);
-        Array.print("TestFBO:green:expect:", GREEN);
+    Assert.assertArrayEquals(GREEN, rGba);
 
-        Assert.assertArrayEquals(GREEN, rGba);
+    // ----------------------------------
+    // Then blue vertex is at the expected
+    // position with expected color
 
-        // ----------------------------------
-        // Then blue vertex is at the expected
-        // position with expected color
+    rgBa = ByteUtils.IntARGBtoRGBAi(image.getRGB(pxB2[0], pxB2[1]));
+    Array.print("TestFBO:blue:actual:", rgBa);
+    Array.print("TestFBO:blue:expect:", BLUE);
 
-        rgBa = ByteUtils.IntARGBtoRGBAi(image.getRGB(pxB2[0], pxB2[1]));
-        Array.print("TestFBO:blue:actual:", rgBa);
-        Array.print("TestFBO:blue:expect:", BLUE);
+    Assert.assertArrayEquals(BLUE, rgBa);
 
-        Assert.assertArrayEquals(BLUE, rgBa);
+    // ----------------------------------
+    // When Release resources
 
-        // ----------------------------------
-        // When Release resources
+    fbo.release(gl);
 
-        fbo.release(gl);
+    // Then
 
-        // Then
+    Assert.assertFalse(fbo.prepared);
+  }
 
-        Assert.assertFalse(fbo.prepared);
-
-    }
-
-    private void saveImage(String file, BufferedImage out) {
-        try {
-            ImageIO.write(out, "png", new File(file));
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
-    }
-
-
+  public static void saveImage(String file, BufferedImage out) {
+      try {
+          ImageIO.write(out, "png", new File(file));
+      } catch (Exception e) {
+          e.printStackTrace();
+      }
+  }
 }
